@@ -3,10 +3,9 @@
     log_path = /opt/{{cookiecutter.project_name}}/
     log_freq = midnight
     log_total = 30
-    discord_webhook = #SECRET
+    discord_webhook = {{cookiecutter.discord_webhook}}
     discord_level = ERROR
-    discord_alert_recipient = #SECRET
-    slack_webhook = #SECRET
+    slack_webhook = {{cookiecutter.slack_webhook}}
     slack_level = ERROR
-    hipchat_webhook = #SECRET
+    hipchat_webhook = {{cookiecutter.hipchat_webhook}}
     hipchat_level = ERROR
