@@ -1,0 +1,7 @@
+# AUTOGENERATED BY: ProsperCookiecutters/ProsperFlask
+# TEMPLATE VERSION: {{cookiecutter.template_version}}
+# AUTHOR: {{cookiecutter.author_name}}
+
+"""bare-bones framework for launching Flask with Gunicorn"""
+
+from endpoints import APP
